remove z-index special-case, no longer needed

--- a/vscode/src/webviews/app/styles/webview.less
+++ b/vscode/src/webviews/app/styles/webview.less
@@ -230,9 +230,6 @@ body.preload * {
 					span {
 						opacity: 1;
 					}
-					&:first-of-type {
-						z-index: 5;
-					}
 				}
 				.header .align-right {
 					display: none;
